# transect

./: .gitignore  LICENSE  PUSH_TO_GITHUB.txt  README.md  TransJect_Demo.ipynb  pyproject.toml  requirements.txt  setup.py
transject/: __init__.py  __version__.py  config.py  data_utils.py  metrics.py  models.py  trainer.py
